--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-tri-state-toggle-switch",
+  "name": "rn-tri-toggle-switch",
   "version": "1.0.0",
   "description": "Simple Tri state toggle switch",
   "main": "src/index",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/summerfed/react-native-tri-state-toggle-switch.git"
+    "url": "git+https://github.com/summerfed/rn-tri-toggle-switch.git"
   },
   "keywords": [
     "react",
@@ -20,14 +20,15 @@
     "react native",
     "tri state",
     "tri state toggle switch",
-    "react native tri state toggle switch"
+    "react native tri state toggle switch",
+    "toggle switch"
   ],
   "author": "Fed Manangan <summerfed@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/newtonry/react-native-drillable-object-view/issues"
   },
-  "homepage": "https://github.com/summerfed/react-native-tri-state-toggle-switch#readme",
+  "homepage": "https://github.com/summerfed/rn-tri-toggle-switch#readme",
   "peerDependencies": {
     "react": "^16.3.0-alpha.1",
     "react-native": "^0.55.4"
